--- a/vulkan-examples.cabal
+++ b/vulkan-examples.cabal
@@ -18,7 +18,7 @@ executable vulkan-example
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , vulkan >= 1.3.2 && < 1.4
+                     , vulkan >= 1.7
   extra-libraries:     vulkan
   default-language:    Haskell2010
 
