--- a/vulkan-examples.cabal
+++ b/vulkan-examples.cabal
@@ -30,6 +30,14 @@ executable vulkan-example-marshalled
                      , say
   default-language:    Haskell2010
 
+executable vulkan-example-dynamic
+  hs-source-dirs:      dynamic-loader
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
+  build-depends:       base
+                     , vulkan >= 2.0
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/expipiplus1/vulkan-examples
