--- a/vulkan-examples.cabal
+++ b/vulkan-examples.cabal
@@ -10,16 +10,16 @@ maintainer:          haskell@monoid.al
 copyright:           2016 Joe Hermaszewski
 category:            Graphics
 build-type:          Simple
--- extra-source-files:
+extra-source-files:  triangle/DebugCallback.c
 cabal-version:       >=1.10
 
-executable vulkan-example
-  hs-source-dirs:      src
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
-  build-depends:       base
-                     , vulkan >= 2.0
-  default-language:    Haskell2010
+-- executable vulkan-example
+--   hs-source-dirs:      src
+--   main-is:             Main.hs
+--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
+--   build-depends:       base
+--                      , vulkan >= 3.0
+--   default-language:    Haskell2010
 
 executable vulkan-example-marshalled
   hs-source-dirs:      marshalled
@@ -30,12 +30,29 @@ executable vulkan-example-marshalled
                      , say
   default-language:    Haskell2010
 
+executable triangle
+  hs-source-dirs:      triangle
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
+  build-depends:       base
+                     , bytestring
+                     , extra
+                     , pretty-show
+                     , say
+                     , sdl2
+                     , text
+                     , vector
+                     , vulkan >= 3.0
+  default-language:    Haskell2010
+  c-sources:           triangle/DebugCallback.c
+  extra-libraries:     SDL2
+
 executable vulkan-example-dynamic
   hs-source-dirs:      dynamic-loader
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
-                     , vulkan >= 2.0
+                     , vulkan >= 3.0
   default-language:    Haskell2010
 
 source-repository head
